--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.app{
+  background-color: #f2f2f2;
+  height: 100vh;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.darkMode{
+  background-color: #000000;
+  color:#ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.navbar {
+  width: 100vw;
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 80px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding-right: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+
+.logo{
+  font-size: 100px;
+  padding-left: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.outer {
+  border-radius: 30px;
+  background-color: #b5b5b5;
+  height: 30px;
+  width: 70px;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  transition: all 0.3s;
+}
+.switch-on {
+  justify-content: flex-end;
+  background-color: rgb(1, 30, 104);
+ 
+}
+.switch-off {
+  justify-content: flex-start;
+ 
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(249, 232, 51, 1) 0%,
+    rgba(250, 196, 59, 1) 100.2%
+  );
+}
+.icons{
+margin-left: 80%;
+font-size: 20px;
+align-items: center;
+color: yellow;
+}
+
+.moon{
+  margin-right: 10px;
+  font-size: 20px;
+align-items: center;
+}
+.inner {
+  border-radius: 50%;
+  height: 22px;
+  width: 22px;
+  background-color: rgb(255, 255, 255);
+}
+.heading {
+  font-size: 50px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial,
+    sans-serif;
+  color: rgb(255, 255, 255);
+
+  padding-bottom: 20px;
+  padding-top: 20px;
+  background-color: #f60032;
+}
+.headingDarkMode{
+  background-color: #000000b5;
+}
+.story {
+  width: 70%;
+  padding: 35px;
+  height: fit-content;
+  margin: auto;
+  align-items: start;
+  font-size: 20px;
+  margin-top: 50px;
+  background-image: linear-gradient(90deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
+    rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
+    rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  font-family: Poppins, sans-serif;
+  line-height: 40px;
+  color: rgb(0, 0, 0);
+}
+.storyDarkMode{
+  color:#ffffff;
+  background-image: linear-gradient(90deg, #b5b5b5 0%, #818080 55%, #b5b5b5 100%);
 }
